--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ name = salbpone
 author = Oleh Oleinikov
 author_email = oleh.oleynikov@gmail.com
 description = Simple Assembly Line Balancing Problem (SALBP-1) solver
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 license = GNU GPL v3
 classifiers =
     Intended Audience :: Developers
